--- a/PROJECT/e-learning/src/Components/Auth/AllCourses/Courses.css
+++ b/PROJECT/e-learning/src/Components/Auth/AllCourses/Courses.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .home-nav-c {
   background-color: white;
@@ -61,11 +61,11 @@
   width: 25rem;
 
   height: 33rem;
-  background-image: url("../../../../public/assets/Image2.png");
+  /* background-image: url("../../../../public/assets/Image2.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-origin: border-box;
+  background-origin: border-box; */
 }
 .Home_conatin {
   margin-right: 10px !important;
