--- a/PROJECT/e-learning/src/Components/Auth/LoginForm/SignUpForm.css
+++ b/PROJECT/e-learning/src/Components/Auth/LoginForm/SignUpForm.css
@@ -1,12 +1,9 @@
 .box {
   background-image: url("../../../../public/assets/USERSAFE.avif");
   background-position: center;
-  /* background-repeat: no-repeat; */
   background-size: contain;
   justify-content: center;
   align-items: center;
-  /* height: 100rem;
-  width: 100vw; */
   position: absolute;
   top: 0;
   bottom: 0;
@@ -63,7 +60,7 @@
 .user_information button[type="submit"] {
   width: 100%;
   height: 45px;
-  background-color: #4caf50; /* Green button */
+  background-color: #4caf50;
   border: none;
   border-radius: 25px;
   cursor: pointer;
@@ -74,5 +71,5 @@
 }
 
 .user_information button[type="submit"]:hover {
-  background-color: #45a049; /* Darker green on hover */
+  background-color: #45a049;
 }
