--- a/Project_frontend/e-learning/src/Components/Auth/LoginForm/Page.css
+++ b/Project_frontend/e-learning/src/Components/Auth/LoginForm/Page.css
@@ -24,6 +24,7 @@
   width: 80px;
   height: auto;
   margin-right: 10px;
+  border-radius: 50%;
 }
 
 .nav-head {
@@ -178,6 +179,8 @@
   background-origin: border-box;
 }
 .setting_logo {
-  width: 133px;
-  padding-left: 4rem;
+  width: 5rem;
+  margin-left: 4rem;
+  border-radius: 28%;
+  background-image: url(../../../../public/assets/setting.jpg);
 }
