--- a/Project_frontend/e-learning/src/Components/Auth/LoginForm/SignUpForm.css
+++ b/Project_frontend/e-learning/src/Components/Auth/LoginForm/SignUpForm.css
@@ -1,9 +1,4 @@
 .box {
-  background-image: url("../../../../public/assets/USERSAFE.avif");
-  background-position: center;
-  background-size: contain;
-  justify-content: center;
-  align-items: center;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -11,15 +6,16 @@
   right: 0;
 }
 .user_information {
-  margin: 2rem 0 0 9rem;
+  color: white;
   background-color: transparent;
-
-  padding: 2rem;
-  border-radius: 10px;
-  box-shadow: 0 10px 20px darkgray; /* Soft shadow */
-  width: 600px;
-  margin-left: 40rem;
-  height: 40rem;
+  margin-top: 3rem;
+  margin-left: 9rem;
+  margin-bottom: 1rem;
+  margin-right: 53rem;
+  padding: 5rem 5rem;
+  border-radius: 60px;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 20px 2px 10px 3px rgba(193 124 33 / 17%);
   overflow: auto;
 }
 
@@ -55,12 +51,13 @@
   outline: none;
   background-color: white;
   border: transparent;
+  /* color: rgb(110, 104, 104); */
 }
 
 .user_information button[type="submit"] {
   width: 100%;
   height: 45px;
-  background-color: #4caf50;
+  background-color: transparent;
   border: none;
   border-radius: 25px;
   cursor: pointer;
@@ -71,5 +68,6 @@
 }
 
 .user_information button[type="submit"]:hover {
-  background-color: #45a049;
+  background-color: rgb(110, 104, 104);
+  border: gray;
 }
