--- a/Project_frontend/e-learning/src/Components/Auth/LoginForm/LoginForm.css
+++ b/Project_frontend/e-learning/src/Components/Auth/LoginForm/LoginForm.css
@@ -1,28 +1,40 @@
+element.style {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 5rem;
+}
 .wrapper {
-  margin: 8rem 0 0 15rem;
+  margin-top: 8rem;
+  margin-left: 14rem;
 }
 
 .wrapper button {
   width: 100%;
   height: 45px;
-  background-color: transparent;
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  background-color: lightskyblue;
+  /* border: 2px solid rgba(255, 255, 255, 0.2); */
   backdrop-filter: blur(30px);
   outline: none;
   border-radius: 40px;
   cursor: pointer;
   font-size: 16px;
-  color: rgb(110, 104, 104);
   font-weight: 700;
   margin-top: 1rem;
+}
+.wrapper button:hover {
+  background-color: darkslateblue;
 }
 
 .information {
   color: white;
   border: 0dvb;
   background-color: transparent;
-  margin-right: 50rem;
-  padding: 5rem 5rem;
+  margin-right: 60rem;
+  margin-top: -3rem;
+  padding: 4rem;
   border-radius: 60px;
   border: 2px solid rgba(255, 255, 255, 0.2);
   box-shadow: 20px 2px 10px 3px rgba(193 124 33 / 17%);
@@ -63,4 +75,12 @@
   width: 5rem;
   height: auto;
   margin-left: 3rem;
+}
+p {
+  margin-top: 1rem;
+}
+.h4,
+h4 {
+  font-size: 1.5rem;
+  padding: 1rem;
 }
