--- a/Project_frontend/e-learning/src/Components/Auth/LoginForm/SignUpForm.css
+++ b/Project_frontend/e-learning/src/Components/Auth/LoginForm/SignUpForm.css
@@ -8,11 +8,11 @@
 .user_information {
   color: white;
   background-color: transparent;
+  min-width: 24rem;
   margin-top: 3rem;
-  margin-left: 9rem;
-  margin-bottom: 1rem;
-  margin-right: 53rem;
-  padding: 5rem 5rem;
+  margin-left: 10rem;
+  margin-right: 56rem;
+  padding: 3rem;
   border-radius: 60px;
   border: 2px solid rgba(255, 255, 255, 0.2);
   box-shadow: 20px 2px 10px 3px rgba(193 124 33 / 17%);
@@ -57,17 +57,46 @@
 .user_information button[type="submit"] {
   width: 100%;
   height: 45px;
-  background-color: transparent;
+  background-color: hotpink;
   border: none;
   border-radius: 25px;
   cursor: pointer;
-  color: white;
+  color: black;
   font-size: 16px;
   font-weight: 700;
-  margin-top: 1rem;
+  margin-top: 2rem;
 }
 
 .user_information button[type="submit"]:hover {
-  background-color: rgb(110, 104, 104);
+  background-color: plum;
   border: gray;
+}
+
+.C {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  background-color: transparent;
+  padding: 0.5rem;
+}
+.P {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  background-color: transparent;
+  padding: 0.5rem;
+}
+.U {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  background-color: transparent;
+  padding: 0.5rem;
+}
+.E {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  background-color: transparent;
+  padding: 0.5rem;
 }
